services aand controllers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,30 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#38b17c",
-        "activityBar.activeBorder": "#883dc2",
-        "activityBar.background": "#38b17c",
+        "activityBar.activeBackground": "#2d94f4",
+        "activityBar.activeBorder": "#b60a63",
+        "activityBar.background": "#2d94f4",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#883dc2",
+        "activityBarBadge.background": "#b60a63",
         "activityBarBadge.foreground": "#e7e7e7",
-        "editorGroup.border": "#38b17c",
-        "panel.border": "#38b17c",
-        "sash.hoverBorder": "#38b17c",
-        "sideBar.border": "#38b17c",
-        "statusBar.background": "#2c8a61",
-        "statusBar.border": "#2c8a61",
-        "statusBar.debuggingBackground": "#8a2c55",
-        "statusBar.debuggingBorder": "#8a2c55",
-        "statusBar.debuggingForeground": "#e7e7e7",
+        "editorGroup.border": "#2d94f4",
+        "panel.border": "#2d94f4",
+        "sash.hoverBorder": "#2d94f4",
+        "sideBar.border": "#2d94f4",
+        "statusBar.background": "#0c7be2",
+        "statusBar.border": "#0c7be2",
+        "statusBar.debuggingBackground": "#e2730c",
+        "statusBar.debuggingBorder": "#e2730c",
+        "statusBar.debuggingForeground": "#15202b",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#38b17c",
-        "statusBarItem.remoteBackground": "#2c8a61",
+        "statusBarItem.hoverBackground": "#2d94f4",
+        "statusBarItem.remoteBackground": "#0c7be2",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "tab.activeBorder": "#38b17c",
-        "titleBar.activeBackground": "#2c8a61",
+        "tab.activeBorder": "#2d94f4",
+        "titleBar.activeBackground": "#0c7be2",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.border": "#2c8a61",
-        "titleBar.inactiveBackground": "#2c8a6199",
+        "titleBar.border": "#0c7be2",
+        "titleBar.inactiveBackground": "#0c7be299",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
     "peacock.remoteColor": "#2c8a61"
